<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Read me -->
    <Preference
        android:key="@string/preference_key_read_me"
        android:title="@string/preference_option_read_me" />

    <!-- Caption-2 -->
    <Preference
        android:key="@string/preference_key_caption_2"
        android:title="@string/preference_option_caption_2" />

    <!-- Caption-1 -->
    <Preference
        android:key="@string/preference_key_caption_1"
        android:title="@string/preference_option_caption_1" />

    <!-- Caption0 -->
    <Preference
        android:key="@string/preference_key_caption0"
        android:title="@string/preference_option_caption0" />

    <!-- Caption1 -->
    <Preference
        android:key="@string/preference_key_caption1"
        android:title="@string/preference_option_caption1" />

    <!-- Caption2 -->
    <Preference
        android:key="@string/preference_key_caption2"
        android:title="@string/preference_option_caption2" />

</PreferenceScreen>
